theLanguageEmporium/force-app/main/default/objects/Candidate_Experience__c/Candidate_Experience__c.object-meta.xml
<CustomObject>
    <label>Candidate Experience</label>
    <nameField>
        <displayFormat>EXP- {000000}</displayFormat>
        <label>Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Experience</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>