theLanguageEmporium/force-app/main/default/objects/Candidate_Experience__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidate Experience</relationshipLabel>
    <relationshipName>Candidate_Experience</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>