theLanguageEmporium/force-app/main/default/objects/Candidate_Experience__c/fields/Reported_To__c.field-meta.xml
<CustomField>
    <fullName>Reported_To__c</fullName>
    <label>Reported To</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>